--- a/ls.ipynb
+++ b/ls.ipynb
@@ -2,29 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "be5dd1c1-e45b-4126-a4f4-44a73b14086b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/kawahara/.conda/envs/sds/lib/python3.7/site-packages/gensim/similarities/__init__.py:15: UserWarning: The gensim.similarities.levenshtein submodule is disabled, because the optional Levenshtein package <https://pypi.org/project/python-Levenshtein/> is unavailable. Install Levenhstein (e.g. `pip install python-Levenshtein`) to suppress this warning.\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from collections import Counter\n",
+    "import os\n",
+    "import pickle\n",
     "from tqdm import tqdm\n",
+    "\n",
     "import numpy as np\n",
+    "\n",
     "import torch\n",
     "from transformers import BertJapaneseTokenizer, BertForMaskedLM\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
     "import gensim.models\n",
     "from gensim.test.utils import datapath\n",
     "\n",
@@ -34,20 +24,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "3124077c-fc7d-475d-87dd-0492323c7c5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at cl-tohoku/bert-base-japanese-whole-word-masking were not used when initializing BertForMaskedLM: ['cls.seq_relationship.weight', 'cls.seq_relationship.bias']\n",
+      "- This IS expected if you are initializing BertForMaskedLM from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertForMaskedLM from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
    "source": [
     "b_tokenizer = BertJapaneseTokenizer.from_pretrained('cl-tohoku/bert-base-japanese-whole-word-masking')\n",
     "b_model = BertForMaskedLM.from_pretrained('cl-tohoku/bert-base-japanese-whole-word-masking')\n",
-    "m_tokenizer = MeCab.Tagger(ipadic.MECAB_ARGS)\n",
+    "m_tagger = MeCab.Tagger(ipadic.MECAB_ARGS)\n",
+    "\n",
     "cm = gensim.models.KeyedVectors.load_word2vec_format(\"assets/cc.ja.300.vec.gz\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 21,
+   "id": "dafa386e-f04e-4948-bf72-a3d51b7efba4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m_tokenizer = MeCab.Tagger('-O wakati ' + ipadic.MECAB_ARGS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
    "id": "4f22a02e-cea8-4dca-8f7f-6d3d102ce65d",
    "metadata": {},
    "outputs": [],
@@ -60,6 +71,7 @@
     "    ogl_mecab_tokens = []\n",
     "    masked_texts = []\n",
     "    target_tokens = []\n",
+    "    mecab_tokens_list = []\n",
     "    zure = 0\n",
     "    \n",
     "    node = mecab_tokenizer.parseToNode(text)\n",
@@ -108,6 +120,8 @@
     "        elif mask_label in ['r','s']:\n",
     "            continue\n",
     "        \n",
+    "        mecab_tokens_list.append(mecab_tokens[:])\n",
+    "        \n",
     "        masked_text = \"\".join(mecab_tokens)\n",
     "        \n",
     "        masked_texts.append(masked_text)\n",
@@ -116,12 +130,12 @@
     "        mecab_tokens[target_idx] = target_token\n",
     "        \n",
     "    \n",
-    "    return masked_texts, target_tokens, memory_masked"
+    "    return masked_texts, mecab_tokens_list, target_tokens, memory_masked"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 4,
    "id": "0a3ec5d0-2f59-4cf6-9c58-b09f69a0dd4a",
    "metadata": {},
    "outputs": [],
@@ -157,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 8,
    "id": "7fc48520-f5fa-45ad-96a3-fdfaf7f97e0c",
    "metadata": {},
    "outputs": [],
@@ -166,34 +180,78 @@
     "    \n",
     "    \"\"\"頻度表を検索，高い順からランキングします\"\"\"\n",
     "    \n",
-    "    import pickle\n",
-    "    import os\n",
-    "    \n",
-    "    if os.path.isfile('assets/bccwj_frequency.pickle') == 'True':\n",
+    "    if os.path.isfile(\"assets/bccwj_frequency.pickle\") == 'True':\n",
     "        bccwj_frequency = {}\n",
-    "        with open('assets/BCCWJ_goihyo_utf8.txt') as BCCWJ:\n",
+    "        with open(\"assets/BCCWJ_goihyo_utf8.txt\") as BCCWJ:\n",
     "            for BCCWJ_line in BCCWJ:\n",
     "                BCCWJ_line_list = BCCWJ_line.split('\\t')\n",
     "                if BCCWJ_line_list[0] != 'ID_BCCWJ':\n",
     "                    bccwj_frequency[BCCWJ_line_list[3]] = sum(int(i) for i in BCCWJ_line_list[9:15])\n",
     "        \n",
-    "        with open(\"assets/bccwj_frequency.pickle\",\"wb\") as f:\n",
+    "        with open(\"assets/bccwj_frequency.pickle\",'wb') as f:\n",
     "            pickle.dump(bccwj_frequency, f)\n",
     "        \n",
-    "    with open('assets/bccwj_frequency.pickle', 'rb') as f:\n",
+    "    with open(\"assets/bccwj_frequency.pickle\", 'rb') as f:\n",
     "        bccwj_frequency = pickle.load(f)\n",
     "    \n",
     "    candidates_frequency = [bccwj_frequency.get(cand, 0) for cand in candidates]\n",
     "    frequency_rank = np.array([np.argsort([-int(freq) for freq in candidates_frequency]).tolist().index(idx) for idx in range(10)]) #ランク付けの呪文\n",
     "    \n",
-    "    frequency_data = {\"frequency\":candidates_frequency, \"rank\":frequency_rank,}\n",
+    "    frequency_data = {'frequency': candidates_frequency, 'rank': frequency_rank}\n",
     "    \n",
     "    return frequency_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 97,
+   "id": "f943cbd0-5722-4ec3-bbc2-706da7a3f95e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def frequency_ranking_twc(candidates, tkz_mkd_text, mecab_tagger):\n",
+    "    cand_genkeis = []\n",
+    "    \n",
+    "    if os.path.isfile(\"./assets/nlt_frequency.pickle\"):\n",
+    "        with open(\"assets/nlt_frequency.pickle\", 'rb') as f:\n",
+    "            nlt_frequency = pickle.load(f)\n",
+    "    else:\n",
+    "        nlt_frequency = {}\n",
+    "        with open(\"assets/NLT_freq_list_split.txt\") as NLT:\n",
+    "            for NLT_line in NLT.read().splitlines():\n",
+    "                NLT_line_list = NLT_line.split(',')\n",
+    "                num = NLT_line_list[1]\n",
+    "                nlt_frequency[NLT_line_list[0]] = num\n",
+    "        \n",
+    "        with open(\"assets/nlt_frequency.pickle\", 'wb') as f:\n",
+    "            pickle.dump(nlt_frequency, f)\n",
+    "    \n",
+    "    masked_idx = tkz_mkd_text.index(\"[MASK]\")\n",
+    "    \n",
+    "    for cand in candidates:\n",
+    "        wak_idx = 0\n",
+    "        \n",
+    "        tkz_mkd_text[masked_idx] = cand\n",
+    "        \n",
+    "        node = mecab_tagger.parseToNode(\"\".join(tkz_mkd_text))\n",
+    "        node = node.next\n",
+    "        while node.next:\n",
+    "            if wak_idx == masked_idx:\n",
+    "                cand_genkeis.append(node.feature.split(',')[6])\n",
+    "            wak_idx = wak_idx + 1\n",
+    "            node = node.next    \n",
+    "    \n",
+    "    candidates_frequency = [nlt_frequency.get(cand, 0) for cand in cand_genkeis]\n",
+    "    frequency_rank = np.array([np.argsort([-int(freq) for freq in candidates_frequency]).tolist().index(idx) for idx in range(10)])\n",
+    "    \n",
+    "    frequency_data = {'frequency': candidates_frequency, 'rank': frequency_rank}\n",
+    "    \n",
+    "    return frequency_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "e537eae7-71b9-4a2c-9376-52f4416a18a8",
    "metadata": {},
    "outputs": [],
@@ -213,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 100,
    "id": "9eeebe5f-37b2-404b-8d68-78ea5cb19e89",
    "metadata": {},
    "outputs": [],
@@ -221,12 +279,13 @@
     "def heiika(text):\n",
     "    simple_words = []\n",
     "    \n",
-    "    masked_list, target_tokens, memory_masked = masking_text(text, m_tokenizer, b_tokenizer)\n",
+    "    masked_list, mkb_tok_list, target_tokens, memory_masked = masking_text(text, m_tagger, b_tokenizer)\n",
     "    \n",
     "    for text_idx, masked_text in enumerate(masked_list):\n",
     "        topk_dict = get_candidates(text, masked_text, b_tokenizer, b_model)\n",
     "\n",
-    "        freq_data = frequency_ranking(topk_dict[\"tokens\"])\n",
+    "        #freq_data = frequency_ranking(topk_dict[\"tokens\"])\n",
+    "        freq_data = frequency_ranking_twc(topk_dict[\"tokens\"], mkb_tok_list[text_idx], m_tagger)\n",
     "\n",
     "        sim_dict = fasttext_similarity_ranking(target_tokens[text_idx], topk_dict[\"tokens\"], cm)\n",
     "\n",
@@ -235,7 +294,12 @@
     "        sorted_candidates = [topk_dict[\"tokens\"][a_idx] for a_idx in avg_idxs]\n",
     "\n",
     "        simple_words.append(sorted_candidates[0])\n",
-    "\n",
+    "        \n",
+    "        print(topk_dict[\"tokens\"])\n",
+    "        print(topk_dict[\"score\"])\n",
+    "        print(freq_data[\"frequency\"])\n",
+    "        print(sim_dict[\"cos_sim\"])\n",
+    "    \n",
     "    kantannabun = []\n",
     "    sw_idx = 0\n",
     "    for tok in memory_masked:\n",
@@ -250,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 101,
    "id": "d7b00dde-126f-4955-b38a-e3fd63f19bfc",
    "metadata": {},
    "outputs": [
@@ -258,12 +322,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "七夕にきさらぎ駅へ訪れた\n"
+      "['若者', '大人', '子供', '子ども', 'アスリート', '青年', '企業', '女性', 'スポーツ', '老人']\n",
+      "tensor([12.6665, 10.3220,  9.9363,  9.8606,  9.3604,  9.3049,  9.1614,  8.9949,\n",
+      "         8.9760,  8.8435])\n",
+      "['44767', '85155', '676310', 0, '1', '34469', '463441', '341491', '68111', '35918']\n",
+      "[1.0, 0.49588507, 0.5431058, 0.5366304, 0.37994212, 0.54304886, 0.4340958, 0.5138575, 0.3189348, 0.5010498]\n",
+      "['未来', '過去', '次世代', '現代', '時代', '明日', '現在', '自然', '日常', '人生']\n",
+      "tensor([13.4072, 11.7603, 10.8013, 10.4733, 10.3210,  9.6666,  9.6420,  9.5709,\n",
+      "         9.1504,  9.0598])\n",
+      "['69384', '132759', '13938', '90122', '360825', '51071', '452559', '301544', '97181', '155473']\n",
+      "[1.0, 0.45295668, 0.5192402, 0.41967815, 0.33084735, 0.3713258, 0.21572639, 0.32597736, 0.2618374, 0.39183265]\n",
+      "['担う', '支える', '担い', '伝える', '引き継ぐ', '育てる', '語る', '考える', '演じる', '生きる']\n",
+      "tensor([17.1996, 12.2899, 11.6165, 11.5818, 11.2846, 11.1931, 11.1063, 10.7688,\n",
+      "        10.6419, 10.6276])\n",
+      "['45554', '70429', '45554', '177123', '17360', '79384', '109779', '1195718', '24091', '222178']\n",
+      "[1.0, 0.6483965, 0.6130984, 0.45741898, 0.5825057, 0.4828217, 0.4386239, 0.4747821, 0.4647299, 0.29216456]\n",
+      "子供が未来を担う\n"
      ]
     }
    ],
    "source": [
-    "heiika(\"七夕にきさらぎ駅へ訪れた\")"
+    "heiika(\"若者が未来を担う\")"
    ]
   },
   {
